feat: 完成获取主题

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,10 @@
       ]
     }
   },
-  "files": ["code.ts"],
+  "files": [
+    "code.ts",
+    "node_modules/.pnpm/@figma+plugin-typings@1.45.0/node_modules/@figma/plugin-typings/index.d.ts"
+  ],
   "include": [
     "src/**/*.ts",
     "src/**/*.d.ts",
