--- a/package.json
+++ b/package.json
@@ -9,12 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ant-design-vue": "^3.2.5",
     "vue": "^3.2.25"
   },
   "devDependencies": {
     "@figma/plugin-typings": "^1.45.0",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
     "@vitejs/plugin-vue": "^2.3.1",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "@vue/eslint-config-typescript": "^10.0.0",
+    "eslint": "^8.16.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^9.0.1",
+    "prettier": "^2.6.2",
     "typescript": "^4.5.4",
+    "unplugin-vue-components": "^0.19.6",
     "vite": "^2.9.5",
     "vite-plugin-html": "^3.2.0",
     "vite-plugin-singlefile": "^0.7.1",
