--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "ant-design-vue": "^3.2.5",
-    "vue": "^3.2.25"
+    "vue": "^3.2.25",
+    "vue-prism-editor": "2.0.0-alpha.2"
   },
   "devDependencies": {
     "@figma/plugin-typings": "^1.45.0",
