--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "ant-design-vue": "^3.2.5",
+    "js-beautify": "^1.14.3",
+    "prismjs": "^1.28.0",
     "vue": "^3.2.25",
     "vue-prism-editor": "2.0.0-alpha.2"
   },
