--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "ant-design-vue": "^3.2.5",
     "js-beautify": "^1.14.3",
+    "lodash": "^4.17.21",
     "prismjs": "^1.28.0",
     "vue": "^3.2.25",
     "vue-prism-editor": "2.0.0-alpha.2"
   },
   "devDependencies": {
     "@figma/plugin-typings": "^1.45.0",
+    "@types/js-beautify": "^1.13.3",
+    "@types/lodash": "^4.14.182",
+    "@types/prismjs": "^1.26.0",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
     "@vitejs/plugin-vue": "^2.3.1",
